[package]
name = "andromeda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28", optional = true }
sea-query = "0.26"
thiserror = "1"

[features]
default = [ "connector-sqlite" ]
connector-sqlite = [ "rusqlite", "sea-query/rusqlite", "sea-query/backend-sqlite" ]
